# NIKL-Core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SUPPORT.md  history.txt  neko.nk
.github/workflows/: docker-create.yaml
docs/: parser.md  todo.md
examples/: data_types.nk  main.nikl  neko.nk  os.nk  test_all.nikl
examples/imports_test/: neko.nk  os.nk
examples/math/: README.md  config.json
examples/math/src/: math.nk
examples/project/: README.md  config.json
examples/project/.nikl/: info.json
examples/project/xyz/: project.nk
src/: interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/cli/: mod.rs  repl.rs  run_file.rs
src/expressions/: mod.rs
src/interpreter/: builtins.rs  engine.rs  environment.rs  mod.rs  repl.rs  run_file.rs  value.rs
src/lexer/: make_tokens.rs  mod.rs  token.rs
src/modules/: builtin_core.rs  mod.rs  os.rs  regex.rs
src/parser/: ast.rs  mod.rs
src/utils/base/: constants.py  libraries.py
src/utils/models/: __init__.py  generic.py
tests/: interpreter_basic.rs  interpreter_core.rs  lexer_token.rs  module_os.rs  module_regex.rs  parser_ast.rs  sample.nk
