[package]
name = "nikl"
version = "0.2.1"
edition = "2024"
authors = ["Neko Nik <admin@nekonik.com>"]
description = "Nikl is a lightweight, modern programming language designed for concurrent, network-aware, and general-purpose programming"
readme = "README.md"
homepage = "https://github.com/Neko-Nik/NIKL-Core"
repository = "https://github.com/Neko-Nik/NIKL-Core"
documentation = "https://github.com/Neko-Nik/NIKL-Core/blob/main/README.md"
keywords = ["interpreter", "language", "nikl", "concurrency", "networking"]
categories = ["compilers", "interpreters", "network-programming"]
rust-version = "1.85.0"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
env_logger = "0.11.6"
rustyline = "13"
log = "0.4"


[profile.release]
overflow-checks = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
lto = "fat"
