[package]
name = "nikl"
version = "0.1.0"
edition = "2024"
authors = ["Neko Nik <admin@nekonik.com>"]
description = "Nikl is a lightweight, modern programming language designed for concurrent, network-aware, and general-purpose programming"
readme = "README.md"
homepage = "https://github.com/Neko-Nik/NIKL-Core"
repository = "https://github.com/Neko-Nik/NIKL-Core"
documentation = "https://github.com/Neko-Nik/NIKL-Core/blob/main/README.md"
keywords = ["interpreter", "language", "nikl", "concurrency", "networking"]
categories = ["compilers", "interpreters", "network-programming", "general-purpose", "programming-languages"]
rust-version = "1.85.0"


[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rustyline = "13"
serde_json = "1"
regex = "1.11.1"
walkdir = "2"
flate2 = "1"
tar = "0.4"


[profile.release]
overflow-checks = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
lto = "fat"
